Include JavaScript files

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,15 @@
       <title>Number to word</title>
       <meta name="description" content="Number to word">
       <meta name="author" content="Kascique Lowmans">
+      <!--Include main class-->
+      <script src="../js/index.js"></script>
    </head>
    <body>
       <input type="number" id="number" />
       <button onclick="getMore()">Convert</button>
 
       <h3 id="result"></h3>
+      <!-- Include demo.js file to use class-->
+      <script src="demo.js"></script>
    </body>
 </html>
